# nrf_blinky_cmake

./: .gitignore  CMakeLists.txt  README.md
